; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/block/extr_cfq-iosched.c_cfq_rb_erase.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/block/extr_cfq-iosched.c_cfq_rb_erase.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.rb_node = type { i32 }
%struct.cfq_rb_root = type { i32, i32, %struct.rb_node* }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.rb_node*, %struct.cfq_rb_root*)* @cfq_rb_erase to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @cfq_rb_erase(%struct.rb_node* %0, %struct.cfq_rb_root* %1) #0 {
  %3 = alloca %struct.rb_node*, align 8
  %4 = alloca %struct.cfq_rb_root*, align 8
  store %struct.rb_node* %0, %struct.rb_node** %3, align 8
  store %struct.cfq_rb_root* %1, %struct.cfq_rb_root** %4, align 8
  %5 = load %struct.cfq_rb_root*, %struct.cfq_rb_root** %4, align 8
  %6 = getelementptr inbounds %struct.cfq_rb_root, %struct.cfq_rb_root* %5, i32 0, i32 2
  %7 = load %struct.rb_node*, %struct.rb_node** %6, align 8
  %8 = load %struct.rb_node*, %struct.rb_node** %3, align 8
  %9 = icmp eq %struct.rb_node* %7, %8
  br i1 %9, label %10, label %13

10:                                               ; preds = %2
  %11 = load %struct.cfq_rb_root*, %struct.cfq_rb_root** %4, align 8
  %12 = getelementptr inbounds %struct.cfq_rb_root, %struct.cfq_rb_root* %11, i32 0, i32 2
  store %struct.rb_node* null, %struct.rb_node** %12, align 8
  br label %13

13:                                               ; preds = %10, %2
  %14 = load %struct.rb_node*, %struct.rb_node** %3, align 8
  %15 = load %struct.cfq_rb_root*, %struct.cfq_rb_root** %4, align 8
  %16 = getelementptr inbounds %struct.cfq_rb_root, %struct.cfq_rb_root* %15, i32 0, i32 1
  %17 = call i32 @rb_erase_init(%struct.rb_node* %14, i32* %16)
  %18 = load %struct.cfq_rb_root*, %struct.cfq_rb_root** %4, align 8
  %19 = getelementptr inbounds %struct.cfq_rb_root, %struct.cfq_rb_root* %18, i32 0, i32 0
  %20 = load i32, i32* %19, align 8
  %21 = add nsw i32 %20, -1
  store i32 %21, i32* %19, align 8
  ret void
}

declare dso_local i32 @rb_erase_init(%struct.rb_node*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
